HW10-1: Add @media responsive queries

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
       <nav class="site-nav">
         <ul class="site-nav__menu">
-          <li class="site-nav__menu-item site-nav__menu-item--active"><a href="#">Главная</a></li>
-          <li class="site-nav__menu-item"><a href="#">Об авторе</a></li>
-          <li class="site-nav__menu-item"><a href="#">Работы</a></li>
-          <li class="site-nav__menu-item"><a href="#">Процесс</a></li>
-          <li class="site-nav__menu-item"><a href="#">Контакты</a></li>
+          <li class="site-nav__menu-item site-nav__menu-item--active"><a href="index.html">Главная</a></li>
+          <li class="site-nav__menu-item"><a href="#section-about">Об авторе</a></li>
+          <li class="site-nav__menu-item"><a href="#section-cases">Работы</a></li>
+          <li class="site-nav__menu-item"><a href="#section-workflow">Процесс</a></li>
+          <li class="site-nav__menu-item"><a href="#section-contact">Контакты</a></li>
         </ul>
       </nav>
 
@@ -34,7 +34,7 @@
   </header>
 
   <main>
-    <section class="bg-gray">
+    <section id="section-hero" class="bg-gray">
       <div class="container">
 
         <div class="headline">
@@ -46,12 +46,12 @@
           </p>
         </div>
 
-        <button class="button">Написать мне</button>
+        <a class="button" href="#section-contact">Написать мне</a>
 
       </div>
     </section>
 
-    <section>
+    <section id="section-about">
       <div class="container">
 
         <div class="headline headline--center">
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <section class="bg-blue">
+    <section id="section-cases" class="bg-blue">
       <div class="container">
 
         <div class="card-group">
@@ -124,7 +124,7 @@
       </div>
     </section>
 
-    <section class="bg-gray">
+    <section id="section-workflow" class="bg-gray">
       <div class="container">
 
         <div class="headline headline--center">
@@ -145,7 +145,7 @@
     </section>
   </main>
 
-  <footer class="site-footer">
+  <footer id="section-contact" class="site-footer">
     <div class="container">
 
       <div class="copyright">
